@@ -1,4 +1,4 @@
-mobac.version=1.9 beta 6
+mobac.version=1.9 beta 5 GCLive3
 mobac.revision.fallback=$Revision$
 mobac.revision.hide=false
 mobac.updateurl=http://mobac.sourceforge.net/mapsources-update/v2/mappacks-md5.txt
