@@ -16,6 +16,7 @@
     [provided by Ľubomír Vasek] 
  ! Bug #3316081 - "String index out of range: -1" upon map sources update 
  ! Incorrect selection and tile count calculation 
+ + New map source: Moldova (point.md)
 
 1.9 beta 5 (2011-05-17)
  + Added possibility Change directory syntax for file and zip based map sources 
